<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <CheckBoxPreference
        android:key="show_coordinate"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="save_file"
        android:title="@string/pref_title_save_file"
        android:summary="@string/pref_description_save_file"
        android:defaultValue="false" />
        -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory
        android:title="@string/categoria_menu"
        android:key="pref_key_storage_settings"


        >
    <EditTextPreference
        android:key="largura_"
        android:title="@string/largura"
        android:defaultValue="@string/largura_default"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="7"
        android:focusable="true"
        android:hint="Largura"
        android:maxLines="1" />

    <EditTextPreference
        android:key="altura_"
        android:title="@string/altura"
        android:defaultValue="@string/altura_default"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="7"
        android:focusable="true"
        android:hint="Altura"
        android:maxLines="1" />

    <EditTextPreference
        android:key="massa_viga_"
        android:title="@string/massa_viga"
        android:defaultValue="@string/massa_viga_default"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="7"
        android:focusable="true"
        android:hint="Massa da Viga"
        android:maxLines="1" />

    <EditTextPreference
        android:key="vao_peca_"
        android:title="@string/vao_peca"
        android:defaultValue="@string/vao_peca_default"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="7"
        android:focusable="true"
        android:hint="Vão da Peça"
        android:maxLines="1" />
    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
</PreferenceCategory>
</PreferenceScreen>
